Prep for crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "quasi"
 version = "0.1.0"
 authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
+license = "MIT/Apache-2.0"
+description = "A quasi-quoting macro system"
+repository = "https://github.com/erickt/rust-quasi"
 
 [dev-dependencies]
 quasi_macros = "0.1.0"
