--- a/quasi_macros/Cargo.toml
+++ b/quasi_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quasi_macros"
-version = "0.1.3"
+version = "0.1.5"
 authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A quasi-quoting macro system"
@@ -11,4 +11,4 @@ name = "quasi_macros"
 plugin = true
 
 [dependencies]
-aster = "0.1.3"
+aster = "*"
