Update to rust HEAD

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "quasi"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A quasi-quoting macro system"
 repository = "https://github.com/erickt/rust-quasi"
 
-[dev-dependencies]
-quasi_macros = "*"
+[dev-dependencies.quasi_macros]
+path = "quasi_macros"
+version = "0.1.7"
