--- a/quasi_codegen/Cargo.toml
+++ b/quasi_codegen/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "quasi_macros"
+name = "quasi_codegen"
 version = "0.2.0"
 authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A quasi-quoting macro system"
 repository = "https://github.com/erickt/rust-quasi"
 
-[lib]
-name = "quasi_macros"
-plugin = true
-
 [dependencies]
-quasi_codegen = { version = "*", path = "../quasi_codegen" }
+aster = "*"
