--- a/quasi/Cargo.toml
+++ b/quasi/Cargo.toml
@@ -6,6 +6,8 @@ license = "MIT/Apache-2.0"
 description = "A quasi-quoting macro system"
 repository = "https://github.com/erickt/rust-quasi"
 
-[dev-dependencies]
-aster = "*"
-quasi_macros = { version = "*", path = "../quasi_macros" }
+[features]
+with-syntex = ["syntex_syntax"]
+
+[dependencies]
+syntex_syntax = { version = "*", optional = true }
