--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,16 @@
 language: rust
 rust:
-  - nightly
-  - beta
-  - stable
+- stable
+- beta
+- nightly
 script:
-  - (test $TRAVIS_RUST_VERSION == "nightly" || (cd quasi_macros && cargo test)
-  - (test $TRAVIS_RUST_VERSION == "nightly" || (cd quasi_macros && cargo doc)
-  - (cd quasi_tests && cargo test)
+- "(cd quasi_codegen && cargo build)"
+- "(cd quasi_macros && cargo build)"
+- (test $TRAVIS_RUST_VERSION == "nightly" && cd quasi_macros && cargo test)
+- (test $TRAVIS_RUST_VERSION == "nightly" && cd quasi_tests && cargo test)
 after_success: |
   [ $TRAVIS_BRANCH = "master" ] &&
   [ $TRAVIS_PULL_REQUEST  = false ] &&
-  cargo doc &&
-  echo "<meta http-equiv=refresh content=0;url=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 2`/index.html>" > target/doc/index.html &&
-  sudo pip install ghp-import &&
-  ghp-import -n target/doc &&
-  git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
 env:
   global:
-  - secure: Yr6jLxCEzsbTwl8AfoU+FQYHw6hPrXIzB6oD349Ki5aGX0UzqX1rFiw1CffWWlSj6vgPQfRP4xrolqXz2F29jELHKwtrmLDVeBUnpcJPkKR5Y1yR7VMvKDvar5UQIy/e/AspSxXZ7kLJeOYEWVk/8N8J3ynLrXEvjXmRywNc3sU=
+  - secure: VdytY7YA8W4q146sMv7vc7G8UBSmEtQC4NImNicffnXXVu/ghbKu+/6knmjDc97mjiz7AdredJzE/lUI3Np9PqONvtMFv8Mzcbcm0vglybIFxEGgNz82dr9wzZ6UnWZu1vULGVnKi1N2sXwYsourEex6Ec4rp89vXshQxYV58tI=
