--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,30 @@ rust:
 - stable
 - beta
 - nightly
-script:
-- "(cd quasi_codegen && cargo build)"
-- "(cd quasi_macros && cargo build)"
-- (test $TRAVIS_RUST_VERSION == "nightly" && cd quasi_macros && cargo test)
-- (test $TRAVIS_RUST_VERSION == "nightly" && cd quasi_tests && cargo test)
-after_success: |
-  [ $TRAVIS_BRANCH = "master" ] &&
-  [ $TRAVIS_PULL_REQUEST  = false ] &&
 env:
   global:
   - secure: VdytY7YA8W4q146sMv7vc7G8UBSmEtQC4NImNicffnXXVu/ghbKu+/6knmjDc97mjiz7AdredJzE/lUI3Np9PqONvtMFv8Mzcbcm0vglybIFxEGgNz82dr9wzZ6UnWZu1vULGVnKi1N2sXwYsourEex6Ec4rp89vXshQxYV58tI=
+  matrix:
+  - CRATE=quasi_codegen
+  - CRATE=quasi_macros
+matrix:
+  include:
+  - rust: nightly
+    env: CRATE=quasi_macros
+script:
+- cd $CRATE && cargo test --verbose
+- cd $CRATE && cargo doc --no-deps
+after_success: |
+  [ $TRAVIS_BRANCH = "master" ] &&
+  [ $TRAVIS_PULL_REQUEST  = false ] &&
+  mkdir -p target/doc &&
+  (cd quasi && cargo doc --no-deps) &&
+  (cd quasi_codegen && cargo doc --no-deps) &&
+  (cd quasi_macros && cargo doc --no-deps) &&
+  cp -r quasi/target/doc target/doc/quasi &&
+  cp -r quasi_codegen/target/doc target/doc/quasi_codegen &&
+  cp -r quasi_macros/target/doc target/doc/quasi_macro &&
+  echo "<meta http-equiv=refresh content=0;url=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 2`/index.html>" > target/doc/index.html &&
+  sudo pip install ghp-import &&
+  ghp-import -n target/doc &&
+  git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
