--- a/quasi_macros/Cargo.toml
+++ b/quasi_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quasi_macros"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A quasi-quoting macro system"
@@ -11,7 +11,7 @@ name = "quasi_macros"
 plugin = true
 
 [dependencies]
-quasi_codegen = { version = "*", path = "../quasi_codegen" }
+quasi_codegen = { version = "*", path = "../quasi_codegen", default-features = false }
 
 [dev-dependencies]
 aster = "*"
