--- a/quasi/Cargo.toml
+++ b/quasi/Cargo.toml
@@ -10,4 +10,4 @@ repository = "https://github.com/erickt/rust-quasi"
 with-syntex = ["syntex_syntax"]
 
 [dependencies]
-syntex_syntax = { version = "*", optional = true }
+syntex_syntax = { version = ">= 0.13.0", optional = true }
