--- a/quasi_codegen/Cargo.toml
+++ b/quasi_codegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quasi_codegen"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A quasi-quoting macro system"
@@ -12,5 +12,5 @@ with-syntex = ["syntex", "syntex_syntax", "aster/with-syntex"]
 
 [dependencies]
 aster = { version = "*", default-features = false }
-syntex = { version = "*", optional = true }
-syntex_syntax = { version = "*", optional = true }
+syntex = { version = ">= 0.11.0", optional = true }
+syntex_syntax = { version = ">= 0.13.0", optional = true }
