Fix no method named print_attribute error
Fixes errors in tests due to
`no method named print_attribute`

--- a/quasi_tests/tests/test.rs.in
+++ b/quasi_tests/tests/test.rs.in
@@ -16,6 +16,7 @@ use syntax::feature_gate::GatedCfg;
 use syntax::parse;
 use syntax::print::pprust;
 use syntax::owned_slice::OwnedSlice;
+use syntax::print::pprust::PrintState;
 
 use aster::name::ToName;
 
