--- a/quasi_codegen/Cargo.toml
+++ b/quasi_codegen/Cargo.toml
@@ -12,5 +12,5 @@ with-syntex = ["syntex", "syntex_syntax", "aster/with-syntex"]
 
 [dependencies]
 aster = { version = ">= 0.4.9", default-features = false }
-syntex = { version = ">= 0.11.0", optional = true }
-syntex_syntax = { version = ">= 0.16.0", optional = true }
+syntex = { version = "^0.17.0", optional = true }
+syntex_syntax = { version = "^0.17.0", optional = true }
