--- a/quasi_tests/Cargo.toml
+++ b/quasi_tests/Cargo.toml
@@ -9,10 +9,10 @@ build = "build.rs"
 
 [build-dependencies]
 quasi_codegen = { version = "*", path = "../quasi_codegen" }
-syntex = { version = "*" }
+syntex = { version = "^0.17.0" }
 
 [dev-dependencies]
-aster = { version = "*", features = ["with-syntex"] }
+aster = { version = "^0.5.0", features = ["with-syntex"] }
 quasi = { version = "*", path = "../quasi", features = ["with-syntex"] }
-syntex = { version = ">= 0.11.0" }
-syntex_syntax = { version = ">= 0.13.0" }
+syntex = { version = "^0.17.0" }
+syntex_syntax = { version = "^0.18.0" }
