--- a/quasi_macros/Cargo.toml
+++ b/quasi_macros/Cargo.toml
@@ -15,4 +15,4 @@ quasi_codegen = { version = "^0.5.0", path = "../quasi_codegen", default-feature
 
 [dev-dependencies]
 aster = "^0.11.0"
-quasi = { version = "*", path = "../quasi" }
+quasi = { version = "^0.5.0", path = "../quasi" }
