--- a/quasi_tests/tests/test.rs.in
+++ b/quasi_tests/tests/test.rs.in
@@ -10,7 +10,7 @@
 
 use syntax::ast;
 use syntax::codemap;
-use syntax::ext::base::ExtCtxt;
+use syntax::ext::base::{DummyMacroLoader, ExtCtxt};
 use syntax::ext::expand;
 use syntax::feature_gate::GatedCfgAttr;
 use syntax::parse;
@@ -21,7 +21,8 @@ use syntax::ptr::P;
 use aster::name::ToName;
 
 fn make_ext_ctxt<'a>(sess: &'a parse::ParseSess,
-                     feature_gated_cfgs: &'a mut Vec<GatedCfgAttr>) -> ExtCtxt<'a> {
+                     feature_gated_cfgs: &'a mut Vec<GatedCfgAttr>,
+                     macro_loader: &'a mut DummyMacroLoader) -> ExtCtxt<'a> {
     let info = codemap::ExpnInfo {
         call_site: codemap::DUMMY_SP,
         callee: codemap::NameAndSpan {
@@ -34,7 +35,7 @@ fn make_ext_ctxt<'a>(sess: &'a parse::ParseSess,
     let cfg = Vec::new();
     let ecfg = expand::ExpansionConfig::default(String::new());
 
-    let mut cx = ExtCtxt::new(&sess, cfg, ecfg, feature_gated_cfgs);
+    let mut cx = ExtCtxt::new(&sess, cfg, ecfg, feature_gated_cfgs, macro_loader);
     cx.bt_push(info);
 
     cx
@@ -44,7 +45,8 @@ fn make_ext_ctxt<'a>(sess: &'a parse::ParseSess,
 fn test_quote_tokens() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let tts = quote_tokens!(&cx, (+ 2 3));
     assert_eq!(pprust::tts_to_string(&tts), "( + 2 3 )");
@@ -54,7 +56,8 @@ fn test_quote_tokens() {
 fn test_quote_ty() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let ty = quote_ty!(&cx, isize);
     assert_eq!(pprust::ty_to_string(&ty), "isize");
@@ -64,7 +67,8 @@ fn test_quote_ty() {
 fn test_quote_expr() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let expr = quote_expr!(&cx, 23);
     assert_eq!(pprust::expr_to_string(&expr), "23");
@@ -78,7 +82,8 @@ fn test_quote_expr() {
 fn test_quote_stmt() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let stmt = quote_stmt!(&cx, let x = 20;).unwrap();
     assert_eq!(pprust::stmt_to_string(&stmt), "let x = 20;");
@@ -88,7 +93,8 @@ fn test_quote_stmt() {
 fn test_quote_pat() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let pat = quote_pat!(&cx, Some(_));
     assert_eq!(pprust::pat_to_string(&pat), "Some(_)");
@@ -98,7 +104,8 @@ fn test_quote_pat() {
 fn test_quote_arm() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let arm = quote_arm!(&cx, (ref x, ref y) => (x, y),);
     assert_eq!(pprust::arm_to_string(&arm), " (ref x, ref y) => (x, y),");
@@ -108,7 +115,8 @@ fn test_quote_arm() {
 fn test_quote_attr() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let attr = quote_attr!(&cx, #![cfg(foo = "bar")]);
     assert_eq!(
@@ -120,7 +128,8 @@ fn test_quote_attr() {
 fn test_quote_block() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let block = quote_block!(&cx, {
         let x = 5;
@@ -137,7 +146,8 @@ fn test_quote_block() {
 fn test_quote_item() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let item = quote_item!(&cx, static x : int = 10;).unwrap();
     assert_eq!(pprust::item_to_string(&item), "static x: int = 10;");
@@ -147,7 +157,8 @@ fn test_quote_item() {
 fn test_quote_impl_item() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let impl_item = quote_impl_item!(&cx, fn method(&mut self, x: u32) -> u32 { x });
     let impl_item = impl_item.ok().unwrap();
@@ -161,7 +172,8 @@ fn test_quote_impl_item() {
 fn test_quote_matcher() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let tts = quote_matcher!(&cx, $($foo:tt,)* bar);
     assert_eq!(pprust::tts_to_string(&tts), "$($foo:tt,)* bar");
@@ -172,7 +184,8 @@ fn test_quote_matcher() {
 fn test_quote_where_clause() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let where_clause = quote_where_clause!(&cx, where A, B: T).ok().unwrap();
 
@@ -187,7 +200,8 @@ fn test_quote_where_clause() {
 fn test_quote_with_macro() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let block = quote_block!(&cx, {
         macro_rules! value { () => 6 }
@@ -218,7 +232,8 @@ fn test_quote_with_macro() {
 fn test_quote_with_generics_and_where_clause() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let builder = aster::AstBuilder::new();
     let generics = builder.generics()
@@ -267,7 +282,8 @@ fn test_quote_with_generics_and_where_clause() {
 fn test_stmt_semicolons() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let mut stmts = Vec::new();
     stmts.push(quote_stmt!(&cx, "let x = 1;"));
@@ -282,7 +298,8 @@ fn test_stmt_semicolons() {
 fn test_sequence_repetitions() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
 
     let mut exprs = Vec::new();
@@ -301,7 +318,8 @@ fn test_sequence_repetitions() {
 fn test_zipped_sequence_repetitions_with_lockstep_iter() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
 
     let a: Vec<i32> = vec![1, 2, 3];
@@ -320,7 +338,8 @@ fn test_zipped_sequence_repetitions_with_lockstep_iter() {
 fn test_sequence_repetition_impls() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
 
     let mut exprs = Vec::new();
@@ -348,7 +367,8 @@ fn test_sequence_repetition_impls() {
 fn test_repeat_once() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let a = vec![1].into_iter();
     let b = vec![1].into_iter();
@@ -365,7 +385,8 @@ fn test_repeat_once() {
 fn test_fail_unbounded_repetition() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let unit = ();
 
@@ -379,7 +400,8 @@ fn test_fail_unbounded_repetition() {
 fn test_fail_repetition_different_lengths() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let a = 0..5;
     let b = 0..10;
@@ -394,7 +416,8 @@ fn test_fail_repetition_different_lengths() {
 fn test_fail_zero_length_repetition() {
     let sess = parse::ParseSess::new();
     let mut feature_gated_cfgs = Vec::new();
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs);
+    let mut macro_loader = DummyMacroLoader;
+    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
 
     let a: Vec<i32> = vec![];
     let a = a.into_iter();
