--- a/quasi_tests/tests/test.rs.in
+++ b/quasi_tests/tests/test.rs.in
@@ -12,7 +12,6 @@ use syntax::ast;
 use syntax::codemap;
 use syntax::ext::base::{DummyMacroLoader, ExtCtxt};
 use syntax::ext::expand;
-use syntax::feature_gate::GatedCfgAttr;
 use syntax::parse;
 use syntax::print::pprust::PrintState;
 use syntax::print::pprust;
@@ -21,7 +20,6 @@ use syntax::ptr::P;
 use aster::name::ToName;
 
 fn make_ext_ctxt<'a>(sess: &'a parse::ParseSess,
-                     feature_gated_cfgs: &'a mut Vec<GatedCfgAttr>,
                      macro_loader: &'a mut DummyMacroLoader) -> ExtCtxt<'a> {
     let info = codemap::ExpnInfo {
         call_site: codemap::DUMMY_SP,
@@ -35,7 +33,7 @@ fn make_ext_ctxt<'a>(sess: &'a parse::ParseSess,
     let cfg = Vec::new();
     let ecfg = expand::ExpansionConfig::default(String::new());
 
-    let mut cx = ExtCtxt::new(&sess, cfg, ecfg, feature_gated_cfgs, macro_loader);
+    let mut cx = ExtCtxt::new(&sess, cfg, ecfg, macro_loader);
     cx.bt_push(info);
 
     cx
@@ -44,9 +42,8 @@ fn make_ext_ctxt<'a>(sess: &'a parse::ParseSess,
 #[test]
 fn test_quote_tokens() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let tts = quote_tokens!(&cx, (+ 2 3));
     assert_eq!(pprust::tts_to_string(&tts), "( + 2 3 )");
@@ -55,9 +52,8 @@ fn test_quote_tokens() {
 #[test]
 fn test_quote_ty() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let ty = quote_ty!(&cx, isize);
     assert_eq!(pprust::ty_to_string(&ty), "isize");
@@ -66,9 +62,8 @@ fn test_quote_ty() {
 #[test]
 fn test_quote_expr() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let expr = quote_expr!(&cx, 23);
     assert_eq!(pprust::expr_to_string(&expr), "23");
@@ -81,9 +76,8 @@ fn test_quote_expr() {
 #[test]
 fn test_quote_stmt() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let stmt = quote_stmt!(&cx, let x = 20;).unwrap();
     assert_eq!(pprust::stmt_to_string(&stmt), "let x = 20;");
@@ -92,9 +86,8 @@ fn test_quote_stmt() {
 #[test]
 fn test_quote_pat() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let pat = quote_pat!(&cx, Some(_));
     assert_eq!(pprust::pat_to_string(&pat), "Some(_)");
@@ -103,9 +96,8 @@ fn test_quote_pat() {
 #[test]
 fn test_quote_arm() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let arm = quote_arm!(&cx, (ref x, ref y) => (x, y),);
     assert_eq!(pprust::arm_to_string(&arm), " (ref x, ref y) => (x, y),");
@@ -114,9 +106,8 @@ fn test_quote_arm() {
 #[test]
 fn test_quote_attr() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let attr = quote_attr!(&cx, #![cfg(foo = "bar")]);
     assert_eq!(
@@ -127,9 +118,8 @@ fn test_quote_attr() {
 #[test]
 fn test_quote_block() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let block = quote_block!(&cx, {
         let x = 5;
@@ -145,9 +135,8 @@ fn test_quote_block() {
 #[test]
 fn test_quote_item() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let item = quote_item!(&cx, static x : int = 10;).unwrap();
     assert_eq!(pprust::item_to_string(&item), "static x: int = 10;");
@@ -156,9 +145,8 @@ fn test_quote_item() {
 #[test]
 fn test_quote_impl_item() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let impl_item = quote_impl_item!(&cx, fn method(&mut self, x: u32) -> u32 { x });
     let impl_item = impl_item.ok().unwrap();
@@ -171,9 +159,8 @@ fn test_quote_impl_item() {
 #[test]
 fn test_quote_matcher() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let tts = quote_matcher!(&cx, $($foo:tt,)* bar);
     assert_eq!(pprust::tts_to_string(&tts), "$($foo:tt,)* bar");
@@ -183,9 +170,8 @@ fn test_quote_matcher() {
 #[test]
 fn test_quote_where_clause() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let where_clause = quote_where_clause!(&cx, where A, B: T).ok().unwrap();
 
@@ -199,9 +185,8 @@ fn test_quote_where_clause() {
 #[test]
 fn test_quote_with_macro() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let block = quote_block!(&cx, {
         macro_rules! value { () => 6 }
@@ -231,9 +216,8 @@ fn test_quote_with_macro() {
 #[test]
 fn test_quote_with_generics_and_where_clause() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let builder = aster::AstBuilder::new();
     let generics = builder.generics()
@@ -281,9 +265,8 @@ fn test_quote_with_generics_and_where_clause() {
 #[test]
 fn test_stmt_semicolons() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let mut stmts = Vec::new();
     stmts.push(quote_stmt!(&cx, "let x = 1;"));
@@ -297,9 +280,8 @@ fn test_stmt_semicolons() {
 #[test]
 fn test_sequence_repetitions() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
 
     let mut exprs = Vec::new();
@@ -317,9 +299,8 @@ fn test_sequence_repetitions() {
 #[test]
 fn test_zipped_sequence_repetitions_with_lockstep_iter() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
 
     let a: Vec<i32> = vec![1, 2, 3];
@@ -337,9 +318,8 @@ fn test_zipped_sequence_repetitions_with_lockstep_iter() {
 #[test]
 fn test_sequence_repetition_impls() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
 
     let mut exprs = Vec::new();
@@ -366,9 +346,8 @@ fn test_sequence_repetition_impls() {
 #[test]
 fn test_repeat_once() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let a = vec![1].into_iter();
     let b = vec![1].into_iter();
@@ -384,9 +363,8 @@ fn test_repeat_once() {
 #[should_panic]
 fn test_fail_unbounded_repetition() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let unit = ();
 
@@ -399,9 +377,8 @@ fn test_fail_unbounded_repetition() {
 #[should_panic]
 fn test_fail_repetition_different_lengths() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let a = 0..5;
     let b = 0..10;
@@ -415,9 +392,8 @@ fn test_fail_repetition_different_lengths() {
 #[should_panic]
 fn test_fail_zero_length_repetition() {
     let sess = parse::ParseSess::new();
-    let mut feature_gated_cfgs = Vec::new();
     let mut macro_loader = DummyMacroLoader;
-    let cx = make_ext_ctxt(&sess, &mut feature_gated_cfgs, &mut macro_loader);
+    let cx = make_ext_ctxt(&sess, &mut macro_loader);
 
     let a: Vec<i32> = vec![];
     let a = a.into_iter();
