--- a/quasi/Cargo.toml
+++ b/quasi/Cargo.toml
@@ -9,6 +9,8 @@ include = ["Cargo.toml", "src/**/*.rs"]
 
 [features]
 with-syntex = ["syntex_syntax"]
+unstable-testing = ["clippy"]
 
 [dependencies]
 syntex_syntax = { version = "^0.36.0", optional = true }
+clippy = { version = "^0.*", optional = true }
