--- a/quasi_codegen/Cargo.toml
+++ b/quasi_codegen/Cargo.toml
@@ -10,8 +10,10 @@ include = ["Cargo.toml", "src/**/*.rs"]
 [features]
 default = ["with-syntex"]
 with-syntex = ["syntex", "syntex_syntax", "aster/with-syntex"]
+unstable-testing = ["clippy"]
 
 [dependencies]
 aster = { version = "^0.19.0", default-features = false }
+clippy = { version = "^0.*", optional = true }
 syntex = { version = "^0.36.0", optional = true }
 syntex_syntax = { version = "^0.36.0", optional = true }
