--- a/quasi_macros/Cargo.toml
+++ b/quasi_macros/Cargo.toml
@@ -11,7 +11,11 @@ include = ["Cargo.toml", "src/**/*.rs"]
 name = "quasi_macros"
 plugin = true
 
+[features]
+unstable-testing = ["clippy", "quasi/unstable-testing", "quasi_codegen/unstable-testing"]
+
 [dependencies]
+clippy = { version = "^0.*", optional = true }
 quasi_codegen = { version = "^0.13.0", path = "../quasi_codegen", default-features = false }
 
 [dev-dependencies]
