--- a/quasi_tests/Cargo.toml
+++ b/quasi_tests/Cargo.toml
@@ -7,9 +7,15 @@ description = "A quasi-quoting macro system"
 repository = "https://github.com/erickt/rust-quasi"
 build = "build.rs"
 
+[features]
+unstable-testing = ["clippy", "quasi/unstable-testing", "quasi_codegen/unstable-testing"]
+
 [build-dependencies]
 quasi_codegen = { path = "../quasi_codegen" }
 syntex = { version = "^0.36.0" }
+
+[dependencies]
+clippy = { version = "^0.*", optional = true }
 
 [dev-dependencies]
 aster = { version = "^0.19.0", features = ["with-syntex"] }
