--- a/quasi/Cargo.toml
+++ b/quasi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quasi"
-version = "0.13.0"
+version = "0.14.0"
 authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A quasi-quoting macro system"
@@ -8,9 +8,10 @@ repository = "https://github.com/serde-rs/quasi"
 include = ["Cargo.toml", "src/**/*.rs"]
 
 [features]
-with-syntex = ["syntex_syntax"]
+with-syntex = ["syntex_syntax", "syntex_errors"]
 unstable-testing = ["clippy"]
 
 [dependencies]
-syntex_syntax = { version = "^0.36.0", optional = true }
 clippy = { version = "^0.*", optional = true }
+syntex_errors = { version = "^0.37.0", optional = true }
+syntex_syntax = { version = "^0.37.0", optional = true }
