--- a/quasi_codegen/Cargo.toml
+++ b/quasi_codegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "quasi_codegen"
-version = "0.13.0"
+version = "0.14.0"
 authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A quasi-quoting macro system"
@@ -9,11 +9,12 @@ include = ["Cargo.toml", "src/**/*.rs"]
 
 [features]
 default = ["with-syntex"]
-with-syntex = ["syntex", "syntex_syntax", "aster/with-syntex"]
+with-syntex = ["syntex", "syntex_errors", "syntex_syntax", "aster/with-syntex"]
 unstable-testing = ["clippy"]
 
 [dependencies]
-aster = { version = "^0.19.0", default-features = false }
+aster = { version = "^0.20.0", default-features = false }
 clippy = { version = "^0.*", optional = true }
-syntex = { version = "^0.36.0", optional = true }
-syntex_syntax = { version = "^0.36.0", optional = true }
+syntex = { version = "^0.37.0", optional = true }
+syntex_errors = { version = "^0.37.0", optional = true }
+syntex_syntax = { version = "^0.37.0", optional = true }
