--- a/quasi/Cargo.toml
+++ b/quasi/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.13.0"
 authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A quasi-quoting macro system"
-repository = "https://github.com/erickt/rust-quasi"
+repository = "https://github.com/serde-rs/quasi"
 include = ["Cargo.toml", "src/**/*.rs"]
 
 [features]
